syntax = "proto3";

package link_service;

import "google/protobuf/timestamp.proto"; // для поля EraseTime

option go_package = "/link_service;link_service";

service LinkService {
  rpc GetLink(GetLinkRequest) returns (GetLinkResponse);
  rpc InputLink(InputLinkRequest) returns (InputLinkResponse);
}

message GetLinkRequest {
  string link = 1;
}

message GetLinkResponse {
  string link = 1;
}

message InputLinkRequest {
  string link = 1;
  string fakeLink = 2;
  google.protobuf.Timestamp eraseTime = 3;
}

message InputLinkResponse {
  bool success = 1;
  string message = 2;
  string id = 3;
}